# plotlib

./: .gitignore  conftest.py  main.py  pyproject.toml
plotlib/: __init__.py  animation.py  constants.py  margins.py  plotlib.py  quicksfigs.py  styles.py
plotlib/dimensions/: __init__.py  dim_single.py  dimensions.py  margins.py  shape.py  spacing.py
plotlib/styles/: paper.mplstyle
src/plotlib/: __init__.py  animation.py  constants.py  plotlib.py  quicksfigs.py  ruler.py
src/plotlib/dimensions/: dim_besides_grid.py  dim_grid.py  dim_single.py
src/plotlib/styles/: dark.mplstyle  paper_dark.mplstyle
tests/: test_examples.py
tests/dimensions/: test_dimensions.py
