[project]
name = "plotlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8.0", "numpy>=2.2.2", "pytest>=8.3.4"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['plotlib']

[tool.setuptools.package-data]
plotlib = ['styles/*']
