[project]
name = "plotlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["imagelib", "matplotlib>=3.8.0", "numpy>=1.9.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['plotlib']

[tool.setuptools.package-data]
"plotlib" = ["styles/*.mplstyle"]

[tool.uv.sources]
imagelib = { git = "https://github.com/vincentvdschaft/imagelib", rev = "main" }
