[project]
name = "plotlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "matplotlib>=3.8.0",
 "numpy>=1.9.0",
 "pyqt6>=6.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['plotlib', 'plotlib.dimensions']

[tool.setuptools.package-data]
"plotlib" = ["styles/*.mplstyle"]
